feat: adds add business api
